--- a/BaseGUI/src/fxml/LoginWindow.fxml
+++ b/BaseGUI/src/fxml/LoginWindow.fxml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginWindowController">
    <children>
-      <Button layoutX="150.0" layoutY="202.0" mnemonicParsing="false" onAction="#backToStartAction" prefHeight="25.0" prefWidth="64.0" text="Menu" />
-      <Button layoutX="235.0" layoutY="202.0" mnemonicParsing="false" onAction="#loginInAction" prefHeight="25.0" prefWidth="64.0" text="Login in" />
-      <PasswordField fx:id="passwordField" layoutX="150.0" layoutY="154.0" />
-      <TextField fx:id="loginField" layoutX="150.0" layoutY="109.0" />
-      <Text layoutX="139.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LIBRARY">
+      <Text fontSmoothingType="LCD" layoutX="122.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LIBRARY">
          <font>
-            <Font name="Century Gothic Bold" size="32.0" />
+            <Font name="System Bold" size="38.0" />
          </font>
       </Text>
-      <Text layoutX="14.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Library Card Number:">
+      <JFXPasswordField fx:id="passwordField" labelFloat="true" layoutX="121.0" layoutY="200.0" promptText="Password" unFocusColor="BLACK">
          <font>
-            <Font name="Times New Roman" size="14.0" />
-         </font>
-      </Text>
-      <Text layoutX="77.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+            <Font size="14.0" />
+         </font></JFXPasswordField>
+      <JFXTextField fx:id="loginField" labelFloat="true" layoutX="122.0" layoutY="129.0" promptText="Library card number" unFocusColor="BLACK">
          <font>
-            <Font name="Times New Roman" size="14.0" />
+            <Font size="14.0" />
+         </font></JFXTextField>
+      <JFXButton fx:id="loginInButton" buttonType="RAISED" layoutX="163.0" layoutY="259.0" onAction="#loginInAction" onMouseEntered="#loginInMouseEntered" onMouseExited="#loginInMouseExited" prefHeight="25.0" prefWidth="72.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="LOGIN IN" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="11.0" />
          </font>
-      </Text>
+      </JFXButton>
+      <JFXButton fx:id="menuButton" buttonType="RAISED" layoutX="23.0" layoutY="353.0" onAction="#backToStartAction" onMouseEntered="#menuMouseEntered" onMouseExited="#menuMouseExited" prefHeight="25.0" prefWidth="72.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="MENU" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="11.0" />
+         </font>
+      </JFXButton>
    </children>
 </Pane>
