--- a/BaseGUI/src/fxml/StartWindow.fxml
+++ b/BaseGUI/src/fxml/StartWindow.fxml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartWindowController">
    <children>
-      <Button layoutX="152.0" layoutY="135.0" mnemonicParsing="false" onAction="#loginAction" prefHeight="25.0" prefWidth="96.0" text="LOGIN" />
-      <Button layoutX="152.0" layoutY="175.0" mnemonicParsing="false" onAction="#registrationAction" text="REGISTRATION" />
-      <Text layoutX="139.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LIBRARY">
+      <Text fontSmoothingType="LCD" layoutX="122.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LIBRARY">
          <font>
-            <Font name="Century Gothic Bold" size="32.0" />
+            <Font name="System Bold" size="38.0" />
          </font>
       </Text>
+      <JFXButton fx:id="loginButton" buttonType="RAISED" layoutX="139.0" layoutY="134.0" onAction="#loginAction" onMouseEntered="#loginMouseEntered" onMouseExited="#loginMouseExited" prefHeight="39.0" prefWidth="122.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="LOGIN" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="registrationButton" buttonType="RAISED" layoutX="139.0" layoutY="200.0" onAction="#registrationAction" onMouseEntered="#registrationMouseEntered" onMouseExited="#registrationMouseExited" prefHeight="39.0" prefWidth="122.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="REGISTRATION" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </JFXButton>
    </children>
 </Pane>
